docs(guide): README.md 업데이트
배포 스크립트 변경에 따른 README.md 업데이트
- build 시 test 제외하고 빌드하도록 함